--- a/cs_f372_os-asign1/Makefile
+++ b/cs_f372_os-asign1/Makefile
@@ -1,10 +1,23 @@
 CC = gcc
 CFLAGS = -Wall -Wextra
+RM = rm -f
+LDFLAGS = -pthread
+
+ifeq ($(OS),Windows_NT)
+    RM = del /Q
+endif
+
+UNAME_S := $(shell uname -s)
+ifeq ($(UNAME_S),Linux)
+    LDFLAGS = -lpthread
+endif
+ifeq ($(UNAME_S),Darwin)
+endif
 
 all: calculator
 
 calculator: multi_thread_calc.c header.h
-	$(CC) $(CFLAGS) -o calculator multi_thread_calc.c -Iinclude -pthread
+	$(CC) $(CFLAGS) -o calculator multi_thread_calc.c $(LDFLAGS)
 
 clean:
-	rm -f calculator
+	$(RM) calculator
